set the inner skeleton

--- a/paz.html
+++ b/paz.html
@@ -8,11 +8,31 @@
 
 <body>
     <div class="container">
-        <header></header>
+        <header>
+            <img class="logo" src="" alt="">
+            <div>
+                <div class="search-box"></div>
+                <div class="lang"></div>
+            </div>
+            <nav></nav>
+        </header>
 
-        <div class="main"></div>
+        <div class="main">
+            <div class="bg-cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="sm-cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </div>
 
-        <footer></footer>
+        <footer>
+            <div class="footer-menu"></div>
+        </footer>
     </div>
 </body>
 
