--- a/paz.html
+++ b/paz.html
@@ -16,9 +16,10 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li class="home">
+                    <li id="home">
                         <a href="#"></a>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">אודות</a>
                         <ul class="dropdown-content">
@@ -45,6 +46,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">חטיבות</a>
                         <ul class="dropdown-content">
@@ -62,6 +64,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">אחריות תאגידית</a>
                         <ul class="dropdown-content">
@@ -85,6 +88,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">קשרי משקיעים</a>
                         <ul class="dropdown-content">
@@ -105,6 +109,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">התחנות שלנו</a>
                         <ul class="dropdown-content">
@@ -122,6 +127,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">קריירה</a>
                         <ul class="dropdown-content">
@@ -136,6 +142,7 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="sep">|</li>
                     <li class="dropdown">
                         <a href="#">חדשות ומדיה</a>
                         <ul class="dropdown-content">
