--- a/paz.html
+++ b/paz.html
@@ -9,153 +9,157 @@
 <body>
     <div class="container">
         <header>
-            <img class="logo" src="" alt="">
-            <div>
-                <div class="search-box"></div>
-                <div class="lang"></div>
+            <div class="header-container">
+                <img class="logo" src="" alt="">
+                <div>
+                    <div class="search-box">
+                        <input type="text">
+                    </div>
+                    <div class="lang"></div>
+                </div>
+                <nav>
+                    <ul class="menu">
+                        <li id="home">
+                            <a href="#"></a>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">אודות</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">אודות</a>
+                                </li>
+                                <li>
+                                    <a href="#">היסטוריה</a>
+                                </li>
+                                <li>
+                                    <a href="#">חזון וערכים</a>
+                                </li>
+                                <li>
+                                    <a href="#">מבנה הקבוצה</a>
+                                </li>
+                                <li>
+                                    <a href="#">חברי דירקטוריון</a>
+                                </li>
+                                <li>
+                                    <a href="#">הנהלת הקבוצה</a>
+                                </li>
+                                <li>
+                                    <a href="#">פרסים והוקרה</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">חטיבות</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">חטיבות</a>
+                                </li>
+                                <li>
+                                    <a href="#">קמעונאות ומסחר</a>
+                                </li>
+                                <li>
+                                    <a href="#">תעשיות ושירותים</a>
+                                </li>
+                                <li>
+                                    <a href="#">זיקוק</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">אחריות תאגידית</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">אחריות תאגידית</a>
+                                </li>
+                                <li>
+                                    <a href="#">הקוד האתי</a>
+                                </li>
+                                <li>
+                                    <a href="#">מעורבות חברתית</a>
+                                </li>
+                                <li>
+                                    <a href="#">נגישות</a>
+                                </li>
+                                <li>
+                                    <a href="#">איכות הסביבה ובטיחות</a>
+                                </li>
+                                <li>
+                                    <a href="#">דירוג מעלה</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">קשרי משקיעים</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">פרופיל חברה</a>
+                                </li>
+                                <li>
+                                    <a href="#">דו"חות כספיים</a>
+                                </li>
+                                <li>
+                                    <a href="#">כלים למשקיע</a>
+                                </li>
+                                <li>
+                                    <a href="#">נתוני מניה</a>
+                                </li>
+                                <li>
+                                    <a href="#">אסיפות כלליות</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">התחנות שלנו</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">התחנות שלנו</a>
+                                </li>
+                                <li>
+                                    <a href="#">נגישות מתחמי פז</a>
+                                </li>
+                                <li>
+                                    <a href="#">רשימת תחנות</a>
+                                </li>
+                                <li>
+                                    <a href="#">מועדונים</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">קריירה</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">לעבוד בפז</a>
+                                </li>
+                                <li>
+                                    <a href="#">ניהול תחנת פז</a>
+                                </li>
+                                <li>
+                                    <a href="#">קריירה</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="sep">|</li>
+                        <li class="dropdown">
+                            <a href="#">חדשות ומדיה</a>
+                            <ul class="dropdown-content">
+                                <li>
+                                    <a href="#">פרסומות</a>
+                                </li>
+                                <li>
+                                    <a href="#">הודעות לעיתונות</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul class="menu">
-                    <li id="home">
-                        <a href="#"></a>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">אודות</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">אודות</a>
-                            </li>
-                            <li>
-                                <a href="#">היסטוריה</a>
-                            </li>
-                            <li>
-                                <a href="#">חזון וערכים</a>
-                            </li>
-                            <li>
-                                <a href="#">מבנה הקבוצה</a>
-                            </li>
-                            <li>
-                                <a href="#">חברי דירקטוריון</a>
-                            </li>
-                            <li>
-                                <a href="#">הנהלת הקבוצה</a>
-                            </li>
-                            <li>
-                                <a href="#">פרסים והוקרה</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">חטיבות</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">חטיבות</a>
-                            </li>
-                            <li>
-                                <a href="#">קמעונאות ומסחר</a>
-                            </li>
-                            <li>
-                                <a href="#">תעשיות ושירותים</a>
-                            </li>
-                            <li>
-                                <a href="#">זיקוק</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">אחריות תאגידית</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">אחריות תאגידית</a>
-                            </li>
-                            <li>
-                                <a href="#">הקוד האתי</a>
-                            </li>
-                            <li>
-                                <a href="#">מעורבות חברתית</a>
-                            </li>
-                            <li>
-                                <a href="#">נגישות</a>
-                            </li>
-                            <li>
-                                <a href="#">איכות הסביבה ובטיחות</a>
-                            </li>
-                            <li>
-                                <a href="#">דירוג מעלה</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">קשרי משקיעים</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">פרופיל חברה</a>
-                            </li>
-                            <li>
-                                <a href="#">דו"חות כספיים</a>
-                            </li>
-                            <li>
-                                <a href="#">כלים למשקיע</a>
-                            </li>
-                            <li>
-                                <a href="#">נתוני מניה</a>
-                            </li>
-                            <li>
-                                <a href="#">אסיפות כלליות</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">התחנות שלנו</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">התחנות שלנו</a>
-                            </li>
-                            <li>
-                                <a href="#">נגישות מתחמי פז</a>
-                            </li>
-                            <li>
-                                <a href="#">רשימת תחנות</a>
-                            </li>
-                            <li>
-                                <a href="#">מועדונים</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">קריירה</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">לעבוד בפז</a>
-                            </li>
-                            <li>
-                                <a href="#">ניהול תחנת פז</a>
-                            </li>
-                            <li>
-                                <a href="#">קריירה</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="sep">|</li>
-                    <li class="dropdown">
-                        <a href="#">חדשות ומדיה</a>
-                        <ul class="dropdown-content">
-                            <li>
-                                <a href="#">פרסומות</a>
-                            </li>
-                            <li>
-                                <a href="#">הודעות לעיתונות</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </header>
 
         <div class="main">
