add logo image to navbar

--- a/paz.html
+++ b/paz.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="header-container">
-                <img class="logo" src="" alt="">
+                <img class="logo" src="../images/paz_logo.png" alt="">
                 <div>
                     <div class="search-box">
                         <input type="text">
