--- a/paz.html
+++ b/paz.html
@@ -14,6 +14,7 @@
                 <div>
                     <div class="search-box">
                         <input type="text">
+                        <a href="#"></a>
                     </div>
                     <div class="lang"></div>
                 </div>
