set footer position

--- a/paz.html
+++ b/paz.html
@@ -20,8 +20,8 @@
                 </div>
                 <nav>
                     <ul class="menu">
-                        <li id="home">
-                            <a href="#"></a>
+                        <li>
+                            <a id="home" href="#"></a>
                         </li>
                         <li class="sep">|</li>
                         <li class="dropdown">
@@ -177,7 +177,8 @@
         </div>
 
         <footer>
-            <div class="footer-menu"></div>
+            <div class="footer-menu">footer
+            </div>
         </footer>
     </div>
 </body>
