add footer menu elements

--- a/paz.html
+++ b/paz.html
@@ -177,7 +177,31 @@
         </div>
 
         <footer>
-            <div class="footer-menu">footer
+            <div class="footer-container">
+                <ul class="footer-menu">
+                    <li>
+                        <a id="fb-btn" href=""></a>
+                    </li>
+                    <li class="sep">|</li>
+                    <li>עמוד הבית</li>
+                    <li class="sep">|</li>
+                    <li>מחירונים</li>
+                    <li class="sep">|</li>
+                    <li>קריירה</li>
+                    <li class="sep">|</li>
+                    <li>תנאי שימוש</li>
+                    <li class="sep">|</li>
+                    <li>נגישות</li>
+                    <li class="sep">|</li>
+                    <li>מפת אתר</li>
+                    <li class="sep">|</li>
+                    <li>צור קשר</li>
+                    <li class="sep">|</li>
+                    <li>שטחי מסחר</li>
+                    <li class="sep">|</li>
+                    <li>הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</li>
+                    <li class="sep">|</li>
+                </ul>
             </div>
         </footer>
     </div>
