--- a/paz.html
+++ b/paz.html
@@ -183,24 +183,41 @@
                         <a id="fb-btn" href=""></a>
                     </li>
                     <li class="sep">|</li>
-                    <li>עמוד הבית</li>
+                    <li>
+                        <a href="#">עמוד הבית</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>מחירונים</li>
+                    <li>
+                        <a href="#">מחירונים</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>קריירה</li>
+                    <li>
+                        <a href="#">קריירה</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>תנאי שימוש</li>
+                    <li>
+                        <a href="#">תנאי שימוש</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>נגישות</li>
+                    <li>
+                        <a href="#">נגישות</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>מפת אתר</li>
+                    <li>
+                        <a href="#">מפת אתר</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>צור קשר</li>
+                    <li>
+                        <a href="#">צור קשר</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>שטחי מסחר</li>
+                    <li>
+                        <a href="#">שטחי מסחר</a>
+                    </li>
                     <li class="sep">|</li>
-                    <li>הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</li>
-                    <li class="sep">|</li>
+                    <li>
+                        <a href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
+                    </li>
                 </ul>
             </div>
         </footer>
