add FB link + style fine tuning

--- a/paz.html
+++ b/paz.html
@@ -180,7 +180,7 @@
             <div class="footer-container">
                 <ul class="footer-menu">
                     <li>
-                        <a id="fb-btn" href=""></a>
+                        <a id="fb-link" href="#"></a>
                     </li>
                     <li class="sep">|</li>
                     <li>
