add language link to header

--- a/paz.html
+++ b/paz.html
@@ -11,12 +11,13 @@
         <header>
             <div class="header-container">
                 <img class="logo" src="../images/paz_logo.png" alt="">
-                <div>
+                <div class="row">
+                    <a class="lang" href="#">English</a>
+
                     <div class="search-box">
                         <input type="text">
                         <a href="#"></a>
                     </div>
-                    <div class="lang"></div>
                 </div>
                 <nav>
                     <ul class="menu">
