add cards elements

--- a/paz.html
+++ b/paz.html
@@ -165,14 +165,46 @@
 
         <div class="main">
             <div class="bg-cards">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card1">
+                    <div class="text-container">
+                        <h4 class="card-title"></h4>
+                        <p class="card-text"></p>
+                        <a class="card-link" href="#"></a>
+                    </div>
+                </div>
+                <div class="card2">
+                    <div class="text-container">
+                        <h4 class="card-title"></h4>
+                        <p class="card-text"></p>
+                        <a class="card-link" href="#"></a>
+                    </div>
+                </div>
+                <div class="card3">
+                    <div class="text-container">
+                        <h4 class="card-title"></h4>
+                        <p class="card-text"></p>
+                        <a class="card-link" href="#"></a>
+                    </div>
+                </div>
             </div>
             <div class="sm-cards">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card4">
+                    <h4 class="card-title"></h4>
+                    <img src="">
+                    <a class="card-link" href="#"></a>
+                </div>
+                <div class="card5">
+                    <h4 class="card-title"></h4>
+                    <img src="">
+                    <a class="card-link" href="#"></a>
+                </div>
+                <div class="card6">
+                    <h4 class="card-title"></h4>
+                    <img src="">
+                    <a class="card-link" href="#"></a>
+                    <a class="card-link" href="#"></a>
+                    <a class="card-link" href="#"></a>
+                </div>
             </div>
         </div>
 
