add big cards text

--- a/paz.html
+++ b/paz.html
@@ -167,23 +167,23 @@
             <div class="bg-cards">
                 <div class="card1">
                     <div class="text-container">
-                        <h4 class="card-title"></h4>
-                        <p class="card-text"></p>
-                        <a class="card-link" href="#"></a>
+                        <h4 class="card-title">קמעונאות ומסחר</h4>
+                        <p class="card-text">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
+                        <a class="card-link" href="#">קרא עוד</a>
                     </div>
                 </div>
                 <div class="card2">
                     <div class="text-container">
-                        <h4 class="card-title"></h4>
-                        <p class="card-text"></p>
-                        <a class="card-link" href="#"></a>
+                        <h4 class="card-title">זיקוק</h4>
+                        <p class="card-text">פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
+                        <a class="card-link" href="#">קרא עוד</a>
                     </div>
                 </div>
                 <div class="card3">
                     <div class="text-container">
-                        <h4 class="card-title"></h4>
-                        <p class="card-text"></p>
-                        <a class="card-link" href="#"></a>
+                        <h4 class="card-title">תעשיות ושירותים</h4>
+                        <p class="card-text">תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
+                        <a class="card-link" href="#">קרא עוד</a>
                     </div>
                 </div>
             </div>
