add small cards text

--- a/paz.html
+++ b/paz.html
@@ -189,21 +189,21 @@
             </div>
             <div class="sm-cards">
                 <div class="card4">
-                    <h4 class="card-title"></h4>
+                    <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
                     <img src="">
-                    <a class="card-link" href="#"></a>
+                    <a class="card-link" href="#">לפרטים נוספים</a>
                 </div>
                 <div class="card5">
-                    <h4 class="card-title"></h4>
+                    <h4 class="card-title">yellow click&pick</h4>
                     <img src="">
-                    <a class="card-link" href="#"></a>
+                    <a class="card-link" href="#">לפרטים נוספים</a>
                 </div>
                 <div class="card6">
-                    <h4 class="card-title"></h4>
+                    <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
                     <img src="">
-                    <a class="card-link" href="#"></a>
-                    <a class="card-link" href="#"></a>
-                    <a class="card-link" href="#"></a>
+                    <a class="card-link" href="#">צפון</a>
+                    <a class="card-link" href="#">מרכז</a>
+                    <a class="card-link" href="#">דרום</a>
                 </div>
             </div>
         </div>
