add small cards bg

--- a/paz.html
+++ b/paz.html
@@ -164,50 +164,51 @@
         </header>
 
         <div class="main">
-            <div class="bg-cards">
-                <div class="card1">
-                    <div class="text-container">
-                        <h4 class="card-title">קמעונאות ומסחר</h4>
-                        <p class="card-text">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+            <div class="cards-container">
+                <div class="bg-cards">
+                    <div class="card1">
+                        <div class="text-container">
+                            <h4 class="card-title">קמעונאות ומסחר</h4>
+                            <p class="card-text">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
+                            <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+                        </div>
+                    </div>
+                    <div class="card2">
+                        <div class="text-container">
+                            <h4 class="card-title">זיקוק</h4>
+                            <p class="card-text">פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
+                            <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="text-container">
+                            <h4 class="card-title">תעשיות ושירותים</h4>
+                            <p class="card-text">תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
+                            <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+                        </div>
                     </div>
                 </div>
-                <div class="card2">
-                    <div class="text-container">
-                        <h4 class="card-title">זיקוק</h4>
-                        <p class="card-text">פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+                <div class="sm-cards">
+                    <div class="card4">
+                        <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
+                        <img src="">
+                        <a class="card-link" href="#">לפרטים נוספים</a>
                     </div>
-                </div>
-                <div class="card3">
-                    <div class="text-container">
-                        <h4 class="card-title">תעשיות ושירותים</h4>
-                        <p class="card-text">תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...</p>
-                        <a class="card-link" href="#">קרא עוד<img src="../images/read_more_white.png"></a>
+                    <div class="card5">
+                        <h4 class="card-title">yellow click&pick</h4>
+                        <img src="">
+                        <a class="card-link" href="#">לפרטים נוספים</a>
                     </div>
-                </div>
-            </div>
-            <div class="sm-cards">
-                <div class="card4">
-                    <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
-                    <img src="">
-                    <a class="card-link" href="#">לפרטים נוספים</a>
-                </div>
-                <div class="card5">
-                    <h4 class="card-title">yellow click&pick</h4>
-                    <img src="">
-                    <a class="card-link" href="#">לפרטים נוספים</a>
-                </div>
-                <div class="card6">
-                    <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
-                    <img src="">
-                    <a class="card-link" href="#">צפון</a>
-                    <a class="card-link" href="#">מרכז</a>
-                    <a class="card-link" href="#">דרום</a>
+                    <div class="card6">
+                        <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
+                        <img src="">
+                        <a class="card-link" href="#">צפון</a>
+                        <a class="card-link" href="#">מרכז</a>
+                        <a class="card-link" href="#">דרום</a>
+                    </div>
                 </div>
             </div>
         </div>
-
         <footer>
             <div class="footer-container">
                 <ul class="footer-menu">
