add sm-cards images

--- a/paz.html
+++ b/paz.html
@@ -191,17 +191,17 @@
                 <div class="sm-cards">
                     <div class="card4">
                         <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
-                        <img src="">
+                        <img src="../images/paz_250x110059890678.jpg">
                         <a class="card-link" href="#">לפרטים נוספים</a>
                     </div>
                     <div class="card5">
                         <h4 class="card-title">yellow click&pick</h4>
-                        <img src="">
+                        <img src="../images/banner_atar.jpg">
                         <a class="card-link" href="#">לפרטים נוספים</a>
                     </div>
                     <div class="card6">
                         <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
-                        <img src="">
+                        <img src="../images/Untitled-3058756287.jpg">
                         <a class="card-link" href="#">צפון</a>
                         <a class="card-link" href="#">מרכז</a>
                         <a class="card-link" href="#">דרום</a>
