add read more icons to small cards

--- a/paz.html
+++ b/paz.html
@@ -192,19 +192,19 @@
                     <div class="card4">
                         <h4 class="card-title">כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
                         <img src="../images/paz_250x110059890678.jpg">
-                        <a class="card-link" href="#">לפרטים נוספים</a>
+                        <a class="card-link" href="#">לפרטים נוספים<img src="../images/read_more_yellow.png"></a>
                     </div>
                     <div class="card5">
                         <h4 class="card-title">yellow click&pick</h4>
                         <img src="../images/banner_atar.jpg">
-                        <a class="card-link" href="#">לפרטים נוספים</a>
+                        <a class="card-link" href="#">לפרטים נוספים<img src="../images/read_more_yellow.png"></a>
                     </div>
                     <div class="card6">
                         <h4 class="card-title">התחנות שלנו בדרך שלך</h4>
                         <img src="../images/Untitled-3058756287.jpg">
-                        <a class="card-link" href="#">צפון</a>
-                        <a class="card-link" href="#">מרכז</a>
-                        <a class="card-link" href="#">דרום</a>
+                        <a class="card-link" href="#">צפון<img src="../images/read_more_yellow.png"></a>
+                        <a class="card-link" href="#">מרכז<img src="../images/read_more_yellow.png"></a>
+                        <a class="card-link" href="#">דרום<img src="../images/read_more_yellow.png"></a>
                     </div>
                 </div>
             </div>
