add search input placeholder + fix css issues

--- a/paz.html
+++ b/paz.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <a class="lang" href="#">English</a>
                     <div class="search-box">
-                        <input type="text">
+                        <input type="text" placeholder="רשום מילת חיפוש">
                         <a href="#"></a>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
             </div>
         </header>
 
-        <div class="main">
+        <main>
             <div class="cards-container">
                 <div class="bg-cards">
                     <div class="card1">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
         <footer>
             <div class="footer-container">
                 <ul class="footer-menu">
