create change image function

--- a/paz.html
+++ b/paz.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -199,7 +200,7 @@
                     <div class="card5">
                         <div class="card-container">
                             <h4 class="card-title">yellow click&pick</h4>
-                            <img class="card-img" src="../images/banner_atar.jpg">
+                            <img id="img" class="card-img" src="../images/banner_atar.jpg">
                             <a class="card-link" href="#">לפרטים נוספים<img src="../images/read_more_yellow.png"></a>
                         </div>
                     </div>
