add contact navigation line

--- a/contact.html
+++ b/contact.html
@@ -171,16 +171,18 @@
                     </li>
                 </ul>
             </nav>
-            <div class="navigation">
-                <a href="paz.html"></a>
-                <span></span>
-            </div>
-            <h3 class="contact-title"></h3>
-            <div class="flex-container">
-                <form action="">
+            <div class="contact-left">
+                <div class="navigation">
+                    <a href="paz.html">עמוד הבית</a>
+                    <span> > צור קשר</span>
+                </div>
+                <h3 class="contact-title"></h3>
+                <div class="flex-container">
+                    <form action="">
 
-                </form>
-                <div class="contact-cards"></div>
+                    </form>
+                    <div class="contact-cards"></div>
+                </div>
             </div>
         </div>
     </main>
